fix: form labels alignment issue.

--- a/themes/metro/scss/_common.scss
+++ b/themes/metro/scss/_common.scss
@@ -1152,6 +1152,8 @@ div#tablestatistics table {
 
 #fieldset_add_user_login {
   div.item {
+    display: flex;
+    align-items: center;
     border-bottom: 1px solid #ddd;
     padding-bottom: 0.3em;
     margin-bottom: 0.3em;
@@ -1164,7 +1166,7 @@ div#tablestatistics table {
     max-width: 100%;
     text-align: $right;
     padding-#{$right}: 0.5em;
-    line-height: 35px;
+    margin-bottom: 0;
   }
 
   span.options {
